// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinTeamsMeeting uses correct styles if form factor is desktop 1`] = `
<div
  className="ms-Stack css-109"
>
  <div
    className="ms-Stack css-110"
  >
    <div>
      <button
        aria-label="Menu Button"
        className="ms-Button ms-Button--icon root-111"
        data-is-focusable={true}
        id="waffle-menu"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-112"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-105 ms-Button-icon icon-114"
            data-icon-name="Waffle"
            style={
              Object {
                "fontFamily": undefined,
              }
            }
          />
        </span>
      </button>
    </div>
    <span
      className="css-119"
    >
      Lamna Healthcare
    </span>
  </div>
  <div
    className="ms-LayerHost"
    id="JoinTeamsMeetingSection"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "position": "relative",
      }
    }
  >
    <div
      className="ms-Stack css-120"
    >
      <div
        className="ms-TextField root-122"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <label
            className="ms-Label root-133"
            htmlFor="TextField44"
            id="TextFieldLabel46"
          >
            Join a call
          </label>
          <div
            className="ms-TextField-fieldGroup fieldGroup-123"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel46"
              className="ms-TextField-field field-124"
              id="TextField44"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter a meeting link"
              type="text"
              value=""
            />
            <i
              aria-hidden={true}
              className="icon-134"
              data-icon-name="Link"
            />
          </div>
        </div>
      </div>
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--primary is-disabled root-135"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-112"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-113"
          >
            <span
              className="ms-Button-label label-137"
              id="id__49"
            >
              Join call
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`JoinTeamsMeeting uses correct styles if form factor is mobile 1`] = `
<div
  className="ms-Stack css-109"
>
  <div
    className="ms-Stack css-110"
  >
    <div>
      <button
        aria-label="Menu Button"
        className="ms-Button ms-Button--icon root-111"
        data-is-focusable={true}
        id="waffle-menu"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-112"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-105 ms-Button-icon icon-114"
            data-icon-name="Waffle"
            style={
              Object {
                "fontFamily": undefined,
              }
            }
          />
        </span>
      </button>
    </div>
    <span
      className="css-119"
    >
      Lamna Healthcare
    </span>
  </div>
  <div
    className="ms-LayerHost"
    id="JoinTeamsMeetingSection"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "position": "relative",
      }
    }
  >
    <div
      className="ms-Stack css-141"
    >
      <div
        className="ms-TextField root-122"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <label
            className="ms-Label root-133"
            htmlFor="TextField57"
            id="TextFieldLabel59"
          >
            Join a call
          </label>
          <div
            className="ms-TextField-fieldGroup fieldGroup-123"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel59"
              className="ms-TextField-field field-124"
              id="TextField57"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter a meeting link"
              type="text"
              value=""
            />
            <i
              aria-hidden={true}
              className="icon-134"
              data-icon-name="Link"
            />
          </div>
        </div>
      </div>
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--primary is-disabled root-135"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-112"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-113"
          >
            <span
              className="ms-Button-label label-137"
              id="id__62"
            >
              Join call
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
